k8s/overlays/cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: record-api-service
spec:
  selector:
    app: record-api
  ports:
    - name: http
      port: 8080
