k8s/overlays/cloud/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: record-api-ingress
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    cert-manager.io/issuer: letsencrypt-production
spec:
  ingressClassName: public-iks-k8s-nginx
  tls: []
  rules: []
